fix migration checksum verification across platforms